# docs

./: 404.html  CNAME  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
docs/faq/billing/: how-to-pay.md  service-cancel.md
docs/faq/service/: domain-change.md  how-to-migrate.md  local-media-calculation.md  local-media-over.md  local-remote-media.md
docs/manual/mastodon/: about-role.md
faq/billing/how-to-pay/: index.html
faq/billing/service-cancel/: index.html
faq/service/domain-change/: index.html
faq/service/how-to-migrate/: index.html
faq/service/local-media-calculation/: index.html
faq/service/local-media-over/: index.html
faq/service/local-remote-media/: index.html
manual/mastodon/about-role/: index.html
search/: search_index.json
